fixed url paths

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap -->
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans' rel='stylesheet' type='text/css'>
-    <link href="/stylesheets/styles.css" rel="stylesheet">
+    <link href="stylesheets/styles.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,7 +22,7 @@
       <h1 class="text-center nm">Veronica Pisano <span>thinks you're rad</span></h1>
     </header>
     <section class="clearfix section-thanks">
-      <img src="/images/vee-and-doc.png" alt="Veronica plus the doctor equals true love" class="pull-left width-half" />
+      <img src="images/vee-and-doc.png" alt="Veronica plus the doctor equals true love" class="pull-left width-half" />
       
     </section>
     <section class="padded section-skillz">
@@ -34,17 +34,17 @@
         <div class="row">
           <div class="col-md-4 text-center">
             <h3 class="h2">Well-rounded design</h3>
-            <img src="/images/design.png" alt="Well-rounded design" />
+            <img src="images/design.png" alt="Well-rounded design" />
             <p>My career has spanned years of working on projects in branding, web, motbile, print, promotional and environmental design.</p>
           </div>
           <div class="col-md-4 text-center">
             <h3 class="h2">Illustration + Doodling</h3>
-            <img src="/images/illustration.png" alt="Illustration and Doodling" />
+            <img src="images/illustration.png" alt="Illustration and Doodling" />
             <p>I love to doodle by hand, but I also am well-versed in the magic of the pen tool. I feel that I can illustrate in different styles!</p>
           </div>
           <div class="col-md-4 text-center">
             <h3 class="h2">Eager team <br class="hidden-sm hidden-xs" /> player</h3>
-            <img src="/images/team.png" alt="Eager team player" />
+            <img src="images/team.png" alt="Eager team player" />
             <p>I work hard and meet every deadline. I think it is important to be both independent and also work collaboratively.</p>
           </div>
         </div>
@@ -55,6 +55,6 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="/javascripts/bootstrap.min.js"></script>
+    <script src="javascripts/bootstrap.min.js"></script>
   </body>
 </html>
