added opacity transition

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="row">
           <div class="col-md-10 col-md-offset-1">
             <p class="text-center mb50 text-grey">I am a short train ride over the bridge and am available to meet most days for a chat or coffee. I thank you again for taking the time to speak with me today and I look forward to hearing from you soon!</p>
-            <p class="text-center mb50">
+            <p class="text-center mb50 social-links">
               <a href="http://www.veronicapisano.com/" target="_blank" title="Visit my portfolio!" class="m5 ib"><img src="images/portfolio.png" /></a>
               <a href="https://dribbble.com/VeronicaPisano" target="_blank" title="Visit my dribbble!" class="m5 ib"><img src="images/dribbble.png" /></a>
               <a href="linkedin.com/in/VeronicaPisano" target="_blank" title="Visit my LinkedIn!" class="m5 ib"><img src="images/linkedin.png" /></a>
