fixed broken link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <img src="images/design.png" alt="Well-rounded design" />
             </a>
             <h3 class="h2 mb20">Well-rounded design</h3>
-            <p class="smaller mb30">My career has spanned years of working on projects in branding, web, motbile, print, promotional and environmental design.</p>
+            <p class="smaller mb30">My career has spanned years of working on projects in branding, web, mobile, print, promotional and environmental design.</p>
             <p class="nm"><a href="http://www.veronicapisano.com/" class="ib button nm h6 text-bold">Examples</a></p>
           </div>
           <div class="col-md-4 text-center mb20-sm">
@@ -77,7 +77,7 @@
             <p class="text-center mb50 social-links">
               <a href="http://www.veronicapisano.com/" target="_blank" title="Visit my portfolio!" class="m5 ib"><img src="images/portfolio.png" /></a>
               <a href="https://dribbble.com/VeronicaPisano" target="_blank" title="Visit my dribbble!" class="m5 ib"><img src="images/dribbble.png" /></a>
-              <a href="linkedin.com/in/VeronicaPisano" target="_blank" title="Visit my LinkedIn!" class="m5 ib"><img src="images/linkedin.png" /></a>
+              <a href="http://linkedin.com/in/VeronicaPisano" target="_blank" title="Visit my LinkedIn!" class="m5 ib"><img src="images/linkedin.png" /></a>
               <a href="mailto:pisano.veronica@gmail.com" title="Send me an email!" class="m5 ib"><img src="images/email.png" /></a>
             </p>
           </div>
